Fixed some displayissues, wrapped up some animarions, added the display of icon labels using

--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,9 @@ body {
   padding: 0;
   font-family: sans-serif;
   box-sizing: border-box;
+  overflow:hidden;
+  overflow-y:auto;
+  overflow-wrap: normal;
 }
 
 .header {
@@ -41,19 +44,22 @@ body {
   display: flex;
   justify-content: right;
   align-items: center;
-  padding: 0 25px;
   box-sizing: border-box;
+  overflow: hidden;
+  padding:10px;
 }
 
 .footer {
     background-color:#191b1d;
     width:100%;
-    height: 13%;
+    height: auto;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    padding: 0 5px;
+    padding: 5px;
+    box-sizing:border-box;
+    overflow: hidden;
 }
 
 .footer img {
@@ -68,6 +74,7 @@ body {
   min-height: 100vh;
   min-width: 100vw;
   box-sizing: border-box;
+  overflow:hidden;
 }
 
 /* Text section - centered, comfortable padding */
@@ -80,32 +87,38 @@ body {
   align-items: center;
   box-sizing: border-box;
   background-color: #2c2f33;
-  padding-bottom:3%;
-  padding-top:3%;
+  margin: 0;
+  padding:10px;
   border-bottom: 5px solid #191b1d;
+  box-sizing:border-box;
+  overflow:hidden;
+
 }
 
 .heading {
-    width:50%;
+    width:100%;
     display: flex;
     justify-content: left;
     flex-direction: column;
     text-align: left;
+    box-sizing:border-box;
+
 }
 
 /* Title and description */
 h1,
 p {
-  text-align: center;
-  margin-top:0;
+  text-align: left;
+  box-sizing:border-box;
+
 }
 
 h1 {
     font-family: 'gg sans SemiBold', sans-serif;
     color:white;
-    margin:0;
     width: 100%;
-    text-align: left;
+    box-sizing:border-box;
+    margin:5px 0;
 }
 
 h2 {
@@ -116,6 +129,7 @@ h2 {
     width:50%;
     font-weight: 700;
     white-space: nowrap;
+    box-sizing: border-box;
 }
 
 h4 {
@@ -123,21 +137,34 @@ h4 {
     color:antiquewhite;
     font-size: small;
     text-align: left;
+    box-sizing:border-box;
+    margin:3px;
+
 }
 
 p {
     color:antiquewhite;
-    margin: 0 0 15px 0;
-    width:60%;
+    width:35%;
+    box-sizing:border-box;
+}
+
+
+.lower-first {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
 }
 
 .powered {
-    width:50%;
+    width:100%;
+    margin:0;
+    padding:0;
 }
 
 /* SVG section - 100% container size, responsive scaling */
 .svg-section {
-  height: 110vh;
+  height: 100vh;
   width: 100vw;
   display: flex;
   flex-direction: column;
@@ -145,6 +172,7 @@ p {
   align-items: center;
   box-sizing: border-box;
   background-color: #363636;
+  overflow: hidden;
 }
 
 /* SVG styling */
@@ -154,17 +182,26 @@ img {
   max-height: 80vh;
 }
 
+
+
+
+
+
+
+
 /* Select section */
 .select-section {
   /* General layout */
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: fit-content;
+  width: 218px;
   background-color: grey;
   border-radius: 5px;
   cursor: pointer;
   user-select: none;
+  box-sizing: border-box;
+  overflow: hidden;
 }
 
 /* Label styling */
@@ -173,6 +210,7 @@ img {
   font-family: sans-serif;
   font-size: 14px;
   padding: 11px 10px;
+  white-space: nowrap;
 }
 
 /* Select element styling */
@@ -196,15 +234,8 @@ img {
 }
 
 /* Arrow icon styling */
-.select-section select::after {
-  content: "";
-  width: 0;
-  height: 0;
-  border-top: 5px solid transparent;
-  border-bottom: 5px solid transparent;
-  border-left: 5px solid #fff;
-  margin-left: 5px;
-  transform: translateY(-2px);
+.wrapper-dropdown-1 .dropdown-toggle::after {
+ 
 }
 
 /* Hover state */
@@ -212,12 +243,70 @@ img {
   background-color: #2f3136;
 }
 
+
+/* Style for the wrapper dropdown */
+.wrapper-dropdown-1 {
+    position: relative;
+    display: inline-block;
+  }
+
+  #selected-option {
+    width:100px;
+  }
+  
+  /* Style for the dropdown toggle */
+  .wrapper-dropdown-1 .dropdown-toggle {
+    background-color: #36393f;
+    color: #fff;
+    width:150px;
+    padding: 8px 21px 9px;
+    border: 1px solid #4f545c;
+    border-radius: 0 5px 5px 0;
+    cursor: pointer;
+    text-align: left;
+  }
+  
+  /* Style for the dropdown options */
+  .wrapper-dropdown-1 .dropdown {
+    position: absolute;
+    top: 30px;
+    left: 3px;
+    background-color: #36393f;
+    border: 1px solid #4f545c;
+    border-top: none;
+    border-radius: 0 0 5px 5px;
+    margin:0;
+    padding:0;
+  }
+
+  .wrapper-dropdown-1 .hidden {
+    display: none;
+  }
+  
+  .wrapper-dropdown-1 .dropdown li {
+    list-style: none;
+    padding: 8px 10px;
+    color: #fff;
+    cursor: pointer;
+  }
+  
+  .wrapper-dropdown-1 .dropdown li:hover {
+    background-color: #2f3136;
+  }
+
+
+
+
+
+
+
+
 /* Icon styles */
 .icon-top {
   width:20%;
+  min-width:50px;
   max-height: 85%;
   margin: 0;
-  margin-bottom: 5px;
 }
 
 .icon-link {
@@ -234,17 +323,16 @@ a {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  align-items: center;
-  height: 20%;
-  width: 80%;
-  margin: 25px 0 25px;
+  align-items:end;
+  height: auto;
+  width: 100%;
 }
 
 #anime-icon {
   stroke: black;
   fill: black;
-  width: 200px;
-  margin-top: 5px;
+  width: 7%;
+  min-width: 150px;
 }
 
 .icon-label, .special-label {
